[package]
name = "advent-of-code-2016"
version = "0.1.0"
authors = ["bram-inniger"]
edition = "2021"
description = "Repository to store solutions for Advent of Code"
readme = "README.md"
homepage = "https://inniger.be"
repository = "https://github.com/bram-inniger/advent-of-code-2016"
license = " GPL-3.0-or-later"
keywords = ["advent-of-code"]
categories = ["algorithms", "data-structures", "mathematics"]

[dependencies]
chrono = "0.4.31"
hex = "0.4.3"
indexmap = "2.1.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
md-5 = "0.10.6"
radix-heap = "0.4.2"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
serde_json = "1.0.111"

#[target.'cfg(target_os = "macos")'.dependencies]
#z3 = { version = "0.12.1", features = ["static-link-z3"] }
#
#[target.'cfg(target_os = "linux")'.dependencies]
#z3 = "0.12.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "day_01_bench"
harness = false
